modify banner home, footer, and unfinished profile page

--- a/src/components/Banner/BannerHome/BannerHome.scss
+++ b/src/components/Banner/BannerHome/BannerHome.scss
@@ -104,6 +104,10 @@
     }
 }
 
+.carousel {
+    background-color: #ECF5FE;
+}
+
 .carousel li.dot.selected {
     width: 50px;
     border-radius: 20px;
