--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,10 +1,111 @@
 .footer {
     background-color: #fff;
-    padding: 35px 0;
+    padding-top: 40px;
     text-align: center;
     position: relative;
 }
 
-.footer__copyright {
+.footer__head {
+    display: flex;
+    flex-direction: row;
+}
 
+.head1 {
+    flex: 1;
+    color: #273f5b;
+    background-color: #273f5b;
+}
+.head2 {
+    flex: 1;
+    color: #0082d7;
+    background-color: #0082d7;
+}
+.head3 {
+    flex: 1;
+    color: #98d5ff;
+    background-color: #98d5ff;
+}
+.head4 {
+    flex: 1;
+    color: #f89101;
+    background-color: #f89101;
+}
+.head5 {
+    flex: 1;
+    color: #ff3133;
+    background-color: #ff3133;
+}
+.head6 {
+    flex: 1;
+    color: #01a23c;
+    background-color: #01a23c;
+}
+.head7 {
+    flex: 1;
+    color: #273f5b;
+    background-color: #273f5b;
+}
+
+.footer__content {
+    background-color: #121921;
+    width: 100%;
+    height: 450px;
+    padding-top: 100px;
+}
+
+.footer__content__main {
+    display: flex;
+    flex-direction: row;
+    text-align: left;
+}
+
+.content__1 {
+    flex: 1;
+    padding-left: 120px;
+    padding-right: 100px;
+    padding-top: 50px;
+}
+
+.content__1 h2 {
+    color: #fff
+}
+
+.content__2 h2 {
+    color: #fff
+}
+
+.content__3 h2 {
+    color: #fff
+}
+
+.content__2 {
+    flex: 1;
+    padding: 40px;
+}
+
+.content__3 {
+    flex: 1;
+    padding: 40px;
+}
+
+.footer__content b, h5, h1, h2, h3, h4, p {
+    color: #485A6F;
+}
+
+.footer__copyright {
+    padding-top: 25px;
+    padding-bottom: 20px;
+    color: #8BA2BE
+}
+
+.footer__copyright b {
+    color:#01a23c
+}
+
+.footer__copyright a {
+    color:#808080
+}
+
+a:hover {
+    color: #01a23c;
 }
